# metadata-driven-workflow-cug-2025

./: README.md  pyproject.toml
mdwc2025/: models.py  training.py
mdwc2025/data/: transforms.py  utils.py
scripts/data-processing/: raw_to_training_data.ipynb  withhold_training_data.py
scripts/model-training/: cug2024.py  training_script.py  withhold_training_data.ipynb
workflow/: driver.py  out_of_sample_worker.py  retrainer.py
workflow/MOM6_inputs/: MOM_override
workflow/MOM6_inputs/Phillips_2layer/: MOM_parameter_doc.all  MOM_parameter_doc.layout  MOM_parameter_doc.short  diag_table  input.nml
