[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-driven-workflow-cug-2025"
version = "0.0.1"
dependencies = [
  "xarray[io]",
  "xgcm",
  "gcm_filters",
  "scikit-learn",
  "torch==1.11.0",
  "smartsim",
  "smartredis",
  "cmf"
]

[tool.setuptools]
packages = ["mdwc2025"]
package-dir = { "mdwc2025" = "mdwc2025" }

[project.optional-dependencies]
dev = [
  "black",
  "isort"
]

[tool.black]
line-length = 88
target-version = ['py310']
exclude = '''
(
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | build
  | dist
  | setup.py
  | .*\.py
)
'''
